--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html, body {
+    overflow: hidden;
+  }
 /*Header*/
 header{
     width: 100%;
